Disable auto symbols on wild search with variant
Do not compute auto symbols if search query does not contain a module
name and version but contain variant specification.

Add isSpecWildWithVariant procedure to determine if search query is wild
with variant specification.

Disabling auto symbols is especially useful for sub-commands like
'paths' that take getModules result and try to resolve each entry. In
this situation it is important not to have any auto symbol that
indirectly targets an element withdrawn from extra match filter.

--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -2591,7 +2591,10 @@ proc getModules {dir {mod {}} {fetch_mtime 0} {search {}} {filter {}}} {
    set implicitdfl [getConf implicit_default]
 
    # automatically define latest and default sym for all modules
-   set autosymbol [expr {$implicitdfl && [getConf advanced_version_spec]}]
+   # disable when implicit default or advanced version spec are disabled or
+   # if search query does not contain a module name and version but variant
+   set autosymbol [expr {$implicitdfl && [getConf advanced_version_spec] &&\
+      ![isSpecWildWithVariant $mod]}]
 
    # match passed name against any part of avail module names
    set contains [expr {{contains} in $search}]
