ts: default symbol and EMS on avail/whatis/paths

--- a/testsuite/modulefiles.4/scan/.modulerc
+++ b/testsuite/modulefiles.4/scan/.modulerc
@@ -9,6 +9,9 @@ if {[info exists env(TESTSUITE_SCAN)]} {
             module-version scan/2.0 foo
             module-version scan/99.9 unk
         }
+        sym2 {
+            module-version scan/1.0 default
+        }
         alias1 {
             module-alias scan/alias scan/1.0
             module-alias scan/alunk scan/unk
