--- a/testsuite/modulefiles.4/scan/.modulerc
+++ b/testsuite/modulefiles.4/scan/.modulerc
@@ -12,6 +12,9 @@ if {[info exists env(TESTSUITE_SCAN)]} {
         sym2 {
             module-version scan/1.0 default
         }
+        sym4 {
+            module-version scan/2.1 default
+        }
         alias1 {
             module-alias scan/alias scan/1.0
             module-alias scan/alunk scan/unk
