Fetch all files if no-indepth mode and EMS asked
In case no-indepth mode is asked and extra match search should be
performed, traditional file lookup (by ``findModules``) is made to
return all existing files. Not only those matching depth level. As extra
match filtering process may eliminate some entries, all of them should
be tested to obtain accurate result.

--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -2649,7 +2649,9 @@ proc getModules {dir {mod {}} {fetch_mtime 0} {search {}} {filter {}}} {
       set add_rc_defs [expr {{rc_defs_included} in $search}]
 
       # if no indepth mode search, pass the depth level of the search query
-      set depthlvl [expr {$indepth ? 0 : $querydepth + 1}]
+      # unless EMS need to be performed (findModules should fetch everything)
+      set depthlvl [expr {$indepth || [isExtraMatchSearchRequired $mod] ? 0 :\
+         $querydepth + 1}]
 
       array set found_list [findModules $dir $findmod $depthlvl $fetch_mtime]
    }
