cirrus: tcl-tk homebrew pkg now use default location

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -99,7 +99,7 @@ task:
     - brew update
     - brew install md5sha1sum expect dejagnu grep fish r tcl-tk
   configure_script:
-    - ./configure --prefix=/tmp/modules --with-loadedmodules=null:dot --with-tcl=/opt/homebrew/Cellar/tcl-tk/8.6.13/lib
+    - ./configure --prefix=/tmp/modules --with-loadedmodules=null:dot --with-tcl=/opt/homebrew/lib
   << : *BUILD_INSTALL_TEST_TEMPLATE
   coverage_script:
     - for f in tcl/*.tcl; do script/nglfar2ccov $f; done
