--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -135,7 +135,7 @@ require-fullname {require-fullname nop        reportCmd      nop            nop 
 set-alias      {set-alias      set-alias-un   reportCmd      nop            nop            nop            set-alias    nop         }
 set-function   {set-function   set-function-un reportCmd     nop            nop            nop            set-function nop         }
 setenv         {setenv         setenv-un      setenv         setenv         setenv         setenv-wh      nop          setenv-wh   }
-source-sh      {source-sh      source-sh-un   source-sh-di   nop            nop            nop            source-sh    nop         }
+source-sh      {source-sh      source-sh-un   source-sh-di   nop            nop            nop            source-sh    source-sh   }
 system         {system         system         reportCmd      nop            nop            nop            nop          nop         }
 uncomplete     {uncomplete     nop            reportCmd      nop            nop            nop            nop          nop         }
 unset-alias    {unset-alias    nop            reportCmd      nop            nop            nop            nop          nop         }
