Record setenv definition during scan eval

--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -134,7 +134,7 @@ remove-property {nop           nop            nop            nop            nop 
 require-fullname {require-fullname nop        reportCmd      nop            nop            nop            nop          nop         }
 set-alias      {set-alias      set-alias-un   reportCmd      nop            nop            nop            set-alias    nop         }
 set-function   {set-function   set-function-un reportCmd     nop            nop            nop            set-function nop         }
-setenv         {setenv         setenv-un      setenv         setenv         setenv         setenv-wh      nop          setenv-wh   }
+setenv         {setenv         setenv-un      setenv         setenv         setenv         setenv-wh      nop          setenv-sc   }
 source-sh      {source-sh      source-sh-un   source-sh-di   nop            nop            nop            source-sh    source-sh   }
 system         {system         system         reportCmd      nop            nop            nop            nop          nop         }
 uncomplete     {uncomplete     nop            reportCmd      nop            nop            nop            nop          nop         }
