--- a/testsuite/modulefiles.4/scan/.modulerc
+++ b/testsuite/modulefiles.4/scan/.modulerc
@@ -19,5 +19,11 @@ if {[info exists env(TESTSUITE_SCAN)]} {
             module-alias scan/alias scan/1.0
             module-alias scan/alunk scan/unk
         }
+        diralias1 {
+            module-alias scan variant1
+        }
+        diralias2 {
+            module-alias diralscan scan
+        }
     }
 }
