Record *-path definitions during scan eval

--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -105,7 +105,7 @@ proc initModfileModeAliases {mode auto aliasesVN aliasesPassArgVN\
       array set g_modfilePerModeAliases {
 add-property   {nop            nop            nop            nop            nop            nop            nop          nop         }
 always-load    {always-load    nop            reportCmd      nop            nop            nop            nop          nop         }
-append-path    {append-path    append-path-un append-path    append-path    append-path    edit-path-wh   nop          edit-path-wh}
+append-path    {append-path    append-path-un append-path    append-path    append-path    edit-path-wh   nop          edit-path-sc}
 chdir          {chdir          nop            reportCmd      nop            nop            nop            nop          nop         }
 complete       {complete       complete-un    reportCmd      nop            nop            nop            complete     nop         }
 conflict       {conflict       nop            reportCmd      nop            nop            nop            nop          nop         }
@@ -124,12 +124,12 @@ module-forbid  {module-forbid  module-forbid  module-forbid  module-forbid  modu
 module-hide    {module-hide    module-hide    module-hide    module-hide    module-hide    module-hide    nop          nop         }
 module-tag     {module-tag     module-tag     module-tag     module-tag     module-tag     module-tag     nop          nop         }
 module-whatis  {nop            nop            reportCmd      nop            nop            module-whatis  nop          nop         }
-prepend-path   {prepend-path   prepend-path-un prepend-path  prepend-path   prepend-path   edit-path-wh   nop          edit-path-wh}
+prepend-path   {prepend-path   prepend-path-un prepend-path  prepend-path   prepend-path   edit-path-wh   nop          edit-path-sc}
 prereq-all     {prereqAllModfileCmd  nop      reportCmd      nop            nop            nop            nop          nop         }
 prereq-any     {prereqAnyModfileCmd  nop      reportCmd      nop            nop            nop            nop          nop         }
 prereq         {prereqAnyModfileCmd  nop      reportCmd      nop            nop            nop            nop          nop         }
 pushenv        {pushenv        pushenv-un     pushenv        pushenv        pushenv        pushenv-wh     nop          pushenv-wh  }
-remove-path    {remove-path    remove-path-un remove-path    remove-path    remove-path    edit-path-wh   nop          edit-path-wh}
+remove-path    {remove-path    remove-path-un remove-path    remove-path    remove-path    edit-path-wh   nop          edit-path-sc}
 remove-property {nop           nop            nop            nop            nop            nop            nop          nop         }
 require-fullname {require-fullname nop        reportCmd      nop            nop            nop            nop          nop         }
 set-alias      {set-alias      set-alias-un   reportCmd      nop            nop            nop            set-alias    nop         }
@@ -167,7 +167,7 @@ x-resource     {x-resource     x-resource     reportCmd      nop            nop 
       set aliastarget [set aliases($alias) [lindex\
          $g_modfilePerModeAliases($alias) $modeidx]]
       # some target procedures need command name as first arg
-      if {$aliastarget in {reportCmd nimp edit-path-wh}} {
+      if {$aliastarget in {reportCmd nimp edit-path-wh edit-path-sc}} {
          set aliasesPassArg($alias) [list $alias]
       # prereq commands need auto_handling state as first arg
       } elseif {$mode eq {load} && $alias in {prereq prereq-any prereq-all\
