Record pushenv definitions during scan eval

--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -128,7 +128,7 @@ prepend-path   {prepend-path   prepend-path-un prepend-path  prepend-path   prep
 prereq-all     {prereqAllModfileCmd  nop      reportCmd      nop            nop            nop            nop          nop         }
 prereq-any     {prereqAnyModfileCmd  nop      reportCmd      nop            nop            nop            nop          nop         }
 prereq         {prereqAnyModfileCmd  nop      reportCmd      nop            nop            nop            nop          nop         }
-pushenv        {pushenv        pushenv-un     pushenv        pushenv        pushenv        pushenv-wh     nop          pushenv-wh  }
+pushenv        {pushenv        pushenv-un     pushenv        pushenv        pushenv        pushenv-wh     nop          pushenv-sc  }
 remove-path    {remove-path    remove-path-un remove-path    remove-path    remove-path    edit-path-wh   nop          edit-path-sc}
 remove-property {nop           nop            nop            nop            nop            nop            nop          nop         }
 require-fullname {require-fullname nop        reportCmd      nop            nop            nop            nop          nop         }
