Record unsetenv definitions during scan eval

--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -140,7 +140,7 @@ system         {system         system         reportCmd      nop            nop 
 uncomplete     {uncomplete     nop            reportCmd      nop            nop            nop            nop          nop         }
 unset-alias    {unset-alias    nop            reportCmd      nop            nop            nop            nop          nop         }
 unset-function {unset-function nop            reportCmd      nop            nop            nop            nop          nop         }
-unsetenv       {unsetenv       unsetenv-un    unsetenv       unsetenv       unsetenv       unsetenv-wh    nop          unsetenv-wh }
+unsetenv       {unsetenv       unsetenv-un    unsetenv       unsetenv       unsetenv       unsetenv-wh    nop          unsetenv-sc }
 variant        {variant        variant        variant        variant        variant        variant-wh     variant      variant-sc  }
 x-resource     {x-resource     x-resource     reportCmd      nop            nop            nop            nop          nop         }
       }
