Record complete definitions during scan eval

--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -107,7 +107,7 @@ add-property   {nop            nop            nop            nop            nop 
 always-load    {always-load    nop            reportCmd      nop            nop            nop            nop          nop         }
 append-path    {append-path    append-path-un append-path    append-path    append-path    edit-path-wh   nop          edit-path-sc}
 chdir          {chdir          nop            reportCmd      nop            nop            nop            nop          nop         }
-complete       {complete       complete-un    reportCmd      nop            nop            nop            complete     nop         }
+complete       {complete       complete-un    reportCmd      nop            nop            nop            complete     complete-sc }
 conflict       {conflict       nop            reportCmd      nop            nop            nop            nop          nop         }
 depends-on     {prereqAllModfileCmd  nop      reportCmd      nop            nop            nop            nop          nop         }
 extensions     {nop            nop            nop            nop            nop            nop            nop          nop         }
