--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -137,7 +137,7 @@ set-function   {set-function   set-function-un reportCmd     nop            nop 
 setenv         {setenv         setenv-un      setenv         setenv         setenv         setenv-wh      nop          setenv-sc   }
 source-sh      {source-sh      source-sh-un   source-sh-di   nop            nop            nop            source-sh    source-sh   }
 system         {system         system         reportCmd      nop            nop            nop            nop          nop         }
-uncomplete     {uncomplete     nop            reportCmd      nop            nop            nop            nop          nop         }
+uncomplete     {uncomplete     nop            reportCmd      nop            nop            nop            nop          uncomplete-sc}
 unset-alias    {unset-alias    nop            reportCmd      nop            nop            nop            nop          nop         }
 unset-function {unset-function nop            reportCmd      nop            nop            nop            nop          nop         }
 unsetenv       {unsetenv       unsetenv-un    unsetenv       unsetenv       unsetenv       unsetenv-wh    nop          unsetenv-sc }
