--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -132,7 +132,7 @@ pushenv        {pushenv        pushenv-un     pushenv        pushenv        push
 remove-path    {remove-path    remove-path-un remove-path    remove-path    remove-path    edit-path-wh   nop          edit-path-sc}
 remove-property {nop           nop            nop            nop            nop            nop            nop          nop         }
 require-fullname {require-fullname nop        reportCmd      nop            nop            nop            nop          nop         }
-set-alias      {set-alias      set-alias-un   reportCmd      nop            nop            nop            set-alias    nop         }
+set-alias      {set-alias      set-alias-un   reportCmd      nop            nop            nop            set-alias    set-alias-sc}
 set-function   {set-function   set-function-un reportCmd     nop            nop            nop            set-function nop         }
 setenv         {setenv         setenv-un      setenv         setenv         setenv         setenv-wh      nop          setenv-sc   }
 source-sh      {source-sh      source-sh-un   source-sh-di   nop            nop            nop            source-sh    source-sh   }
