Record unset-alias definitions during scan eval

--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -138,7 +138,7 @@ setenv         {setenv         setenv-un      setenv         setenv         sete
 source-sh      {source-sh      source-sh-un   source-sh-di   nop            nop            nop            source-sh    source-sh   }
 system         {system         system         reportCmd      nop            nop            nop            nop          nop         }
 uncomplete     {uncomplete     nop            reportCmd      nop            nop            nop            nop          uncomplete-sc}
-unset-alias    {unset-alias    nop            reportCmd      nop            nop            nop            nop          nop         }
+unset-alias    {unset-alias    nop            reportCmd      nop            nop            nop            nop          unset-alias-sc}
 unset-function {unset-function nop            reportCmd      nop            nop            nop            nop          nop         }
 unsetenv       {unsetenv       unsetenv-un    unsetenv       unsetenv       unsetenv       unsetenv-wh    nop          unsetenv-sc }
 variant        {variant        variant        variant        variant        variant        variant-wh     variant      variant-sc  }
