Record set-function definitions during scan eval

--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -133,7 +133,7 @@ remove-path    {remove-path    remove-path-un remove-path    remove-path    remo
 remove-property {nop           nop            nop            nop            nop            nop            nop          nop         }
 require-fullname {require-fullname nop        reportCmd      nop            nop            nop            nop          nop         }
 set-alias      {set-alias      set-alias-un   reportCmd      nop            nop            nop            set-alias    set-alias-sc}
-set-function   {set-function   set-function-un reportCmd     nop            nop            nop            set-function nop         }
+set-function   {set-function   set-function-un reportCmd     nop            nop            nop            set-function set-function-sc}
 setenv         {setenv         setenv-un      setenv         setenv         setenv         setenv-wh      nop          setenv-sc   }
 source-sh      {source-sh      source-sh-un   source-sh-di   nop            nop            nop            source-sh    source-sh   }
 system         {system         system         reportCmd      nop            nop            nop            nop          nop         }
