Record unset-function definitions during scan eval

--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -139,7 +139,7 @@ source-sh      {source-sh      source-sh-un   source-sh-di   nop            nop 
 system         {system         system         reportCmd      nop            nop            nop            nop          nop         }
 uncomplete     {uncomplete     nop            reportCmd      nop            nop            nop            nop          uncomplete-sc}
 unset-alias    {unset-alias    nop            reportCmd      nop            nop            nop            nop          unset-alias-sc}
-unset-function {unset-function nop            reportCmd      nop            nop            nop            nop          nop         }
+unset-function {unset-function nop            reportCmd      nop            nop            nop            nop          unset-function-sc}
 unsetenv       {unsetenv       unsetenv-un    unsetenv       unsetenv       unsetenv       unsetenv-wh    nop          unsetenv-sc }
 variant        {variant        variant        variant        variant        variant        variant-wh     variant      variant-sc  }
 x-resource     {x-resource     x-resource     reportCmd      nop            nop            nop            nop          nop         }
