--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -106,7 +106,7 @@ proc initModfileModeAliases {mode auto aliasesVN aliasesPassArgVN\
 add-property   {nop            nop            nop            nop            nop            nop            nop          nop         }
 always-load    {always-load    nop            reportCmd      nop            nop            nop            nop          nop         }
 append-path    {append-path    append-path-un append-path    append-path    append-path    edit-path-wh   nop          edit-path-sc}
-chdir          {chdir          nop            reportCmd      nop            nop            nop            nop          nop         }
+chdir          {chdir          nop            reportCmd      nop            nop            nop            nop          chdir-sc    }
 complete       {complete       complete-un    reportCmd      nop            nop            nop            complete     complete-sc }
 conflict       {conflict       nop            reportCmd      nop            nop            nop            nop          nop         }
 depends-on     {prereqAllModfileCmd  nop      reportCmd      nop            nop            nop            nop          nop         }
