--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -126,8 +126,8 @@ module-tag     {module-tag     module-tag     module-tag     module-tag     modu
 module-whatis  {nop            nop            reportCmd      nop            nop            module-whatis  nop          nop         }
 prepend-path   {prepend-path   prepend-path-un prepend-path  prepend-path   prepend-path   edit-path-wh   nop          edit-path-sc}
 prereq-all     {prereqAllModfileCmd  nop      reportCmd      nop            nop            nop            nop          nop         }
-prereq-any     {prereqAnyModfileCmd  nop      reportCmd      nop            nop            nop            nop          nop         }
-prereq         {prereqAnyModfileCmd  nop      reportCmd      nop            nop            nop            nop          nop         }
+prereq-any     {prereqAnyModfileCmd  nop      reportCmd      nop            nop            nop            nop          prereq-sc   }
+prereq         {prereqAnyModfileCmd  nop      reportCmd      nop            nop            nop            nop          prereq-sc   }
 pushenv        {pushenv        pushenv-un     pushenv        pushenv        pushenv        pushenv-wh     nop          pushenv-sc  }
 remove-path    {remove-path    remove-path-un remove-path    remove-path    remove-path    edit-path-wh   nop          edit-path-sc}
 remove-property {nop           nop            nop            nop            nop            nop            nop          nop         }
