codespell: ignore additional generated content

--- a/.github/workflows/windows_tests.yaml
+++ b/.github/workflows/windows_tests.yaml
@@ -72,7 +72,7 @@ jobs:
         with:
           # precise all sphinxcontrib packages required as dependency spec
           # of python39-sphinx package is regularly broken
-          # precise liblapack0 package needed by R package (missing depdency
+          # precise liblapack0 package needed by R package (missing dependency
           # since R-4.2.1-1)
           packages: make sed git autoconf automake libtool tcl dejagnu python39 python39-sphinx ruby zsh tcsh mksh fish cmake R liblapack0 tcl-devel gcc-core wget python39-sphinxcontrib-applehelp python39-sphinxcontrib-devhelp python39-sphinxcontrib-htmlhelp python39-sphinxcontrib-jsmath python39-sphinxcontrib-qthelp python39-sphinxcontrib-serializinghtml python39-sphinxcontrib-websupport python39-alabaster python39-sqlalchemy
       - name: Configure Git safe.directory
