--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -111,7 +111,7 @@ complete       {complete       complete-un    reportCmd      nop            nop 
 conflict       {conflict       nop            reportCmd      nop            nop            nop            nop          nop         }
 depends-on     {prereqAllModfileCmd  nop      reportCmd      nop            nop            nop            nop          nop         }
 extensions     {nop            nop            nop            nop            nop            nop            nop          nop         }
-family         {family         family-un      reportCmd      nop            nop            nop            nop          nop         }
+family         {family         family-un      reportCmd      nop            nop            nop            nop          family-sc   }
 module         {module         module         reportCmd      nop            nop            nop            nop          nop         }
 module-alias   {module-alias   module-alias   module-alias   module-alias   module-alias   module-alias   nop          nop         }
 module-log     {nimp           nimp           reportCmd      nop            nop            nop            nop          nop         }
