--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -368,7 +368,10 @@ proc module {command args} {
       source]} {
       # some cmds allow to express variant without module name
       set allow_noname_spec [expr {$command in {avail list paths whatis}}]
-      set args [parseModuleSpecification 0 $allow_noname_spec {*}$args]
+      # some cmds allow extra specifier in query
+      set allow_xt_spec [expr {$command in {avail paths whatis}}]
+      set args [parseModuleSpecification 0 $allow_noname_spec $allow_xt_spec\
+         {*}$args]
    }
 
    if {!$topcall} {
@@ -807,7 +810,7 @@ proc ml {args} {
    } else {
       # parse specified module and get list of mods to unload and mods to load
       defineParseModuleSpecificationProc [getConf advanced_version_spec]
-      lassign [parseModuleSpecification 1 0 {*}$fargs] modunlist modlolist
+      lassign [parseModuleSpecification 1 0 0 {*}$fargs] modunlist modlolist
 
       # main procedure has already raised error for badly written argument
       # like '-' or '--', but we need here to replay module-specific argument
