install: fix expected log format in gitlog2changelog.py
Update gitlog2changelog.py script to ensure git log format is not
influenced by user git configuration.

Fixes #487.

--- a/script/gitlog2changelog.py.in
+++ b/script/gitlog2changelog.py.in
@@ -14,7 +14,7 @@ if len(sys.argv) > 1:
     rev_range = '%s..HEAD' % base
 
 # Execute git log with the desired command line options.
-fin = os.popen('git log --summary --stat --no-merges --date=short %s' % rev_range, 'r')
+fin = os.popen('git log --pretty=medium --summary --stat --no-merges --date=short %s' % rev_range, 'r')
 # Create a ChangeLog file in the current directory.
 fout = open('ChangeLog', 'w')
 
