Record prereq-all/depends-on definitions during scan eval
require, prereq-all and depends-on are aliases of prereq-all and
depends-on extra specifiers.

--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -109,7 +109,7 @@ append-path    {append-path    append-path-un append-path    append-path    appe
 chdir          {chdir          nop            reportCmd      nop            nop            nop            nop          chdir-sc    }
 complete       {complete       complete-un    reportCmd      nop            nop            nop            complete     complete-sc }
 conflict       {conflict       nop            reportCmd      nop            nop            nop            nop          nop         }
-depends-on     {prereqAllModfileCmd  nop      reportCmd      nop            nop            nop            nop          nop         }
+depends-on     {prereqAllModfileCmd  nop      reportCmd      nop            nop            nop            nop          prereq-all-sc}
 extensions     {nop            nop            nop            nop            nop            nop            nop          nop         }
 family         {family         family-un      reportCmd      nop            nop            nop            nop          family-sc   }
 module         {module         module         reportCmd      nop            nop            nop            nop          nop         }
@@ -125,7 +125,7 @@ module-hide    {module-hide    module-hide    module-hide    module-hide    modu
 module-tag     {module-tag     module-tag     module-tag     module-tag     module-tag     module-tag     nop          nop         }
 module-whatis  {nop            nop            reportCmd      nop            nop            module-whatis  nop          nop         }
 prepend-path   {prepend-path   prepend-path-un prepend-path  prepend-path   prepend-path   edit-path-wh   nop          edit-path-sc}
-prereq-all     {prereqAllModfileCmd  nop      reportCmd      nop            nop            nop            nop          nop         }
+prereq-all     {prereqAllModfileCmd  nop      reportCmd      nop            nop            nop            nop          prereq-all-sc}
 prereq-any     {prereqAnyModfileCmd  nop      reportCmd      nop            nop            nop            nop          prereq-sc   }
 prereq         {prereqAnyModfileCmd  nop      reportCmd      nop            nop            nop            nop          prereq-sc   }
 pushenv        {pushenv        pushenv-un     pushenv        pushenv        pushenv        pushenv-wh     nop          pushenv-sc  }
