Record always-load definitions during scan eval
require is an alias of always-load extra specifier.

--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -104,7 +104,7 @@ proc initModfileModeAliases {mode auto aliasesVN aliasesPassArgVN\
       ##nagelfar ignore #41 Too long line
       array set g_modfilePerModeAliases {
 add-property   {nop            nop            nop            nop            nop            nop            nop          nop         }
-always-load    {always-load    nop            reportCmd      nop            nop            nop            nop          nop         }
+always-load    {always-load    nop            reportCmd      nop            nop            nop            nop          always-load-sc}
 append-path    {append-path    append-path-un append-path    append-path    append-path    edit-path-wh   nop          edit-path-sc}
 chdir          {chdir          nop            reportCmd      nop            nop            nop            nop          chdir-sc    }
 complete       {complete       complete-un    reportCmd      nop            nop            nop            complete     complete-sc }
