Record module load/load-any/try-load during scan eval
load, try-load and load-any sub-command names are an extra specifier.
require is an alias of them.

--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -112,7 +112,7 @@ conflict       {conflict       nop            reportCmd      nop            nop 
 depends-on     {prereqAllModfileCmd  nop      reportCmd      nop            nop            nop            nop          prereq-all-sc}
 extensions     {nop            nop            nop            nop            nop            nop            nop          nop         }
 family         {family         family-un      reportCmd      nop            nop            nop            nop          family-sc   }
-module         {module         module         reportCmd      nop            nop            nop            nop          nop         }
+module         {module         module         reportCmd      nop            nop            nop            nop          module-sc   }
 module-alias   {module-alias   module-alias   module-alias   module-alias   module-alias   module-alias   nop          nop         }
 module-log     {nimp           nimp           reportCmd      nop            nop            nop            nop          nop         }
 module-trace   {nimp           nimp           reportCmd      nop            nop            nop            nop          nop         }
