Record conflict during scan eval
conflict command is an extra specifier. incompat is an alias of it.

--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -108,7 +108,7 @@ always-load    {always-load    nop            reportCmd      nop            nop 
 append-path    {append-path    append-path-un append-path    append-path    append-path    edit-path-wh   nop          edit-path-sc}
 chdir          {chdir          nop            reportCmd      nop            nop            nop            nop          chdir-sc    }
 complete       {complete       complete-un    reportCmd      nop            nop            nop            complete     complete-sc }
-conflict       {conflict       nop            reportCmd      nop            nop            nop            nop          nop         }
+conflict       {conflict       nop            reportCmd      nop            nop            nop            nop          conflict-sc }
 depends-on     {prereqAllModfileCmd  nop      reportCmd      nop            nop            nop            nop          prereq-all-sc}
 extensions     {nop            nop            nop            nop            nop            nop            nop          nop         }
 family         {family         family-un      reportCmd      nop            nop            nop            nop          family-sc   }
