Refer to string index with M+N notation
As M+N notation is now a valid syntax to refer to a string index
(starting Tcl 8.5), change code to use this syntax rather using expr to
compute an index value.

--- a/tcl/envmngt.tcl.in
+++ b/tcl/envmngt.tcl.in
@@ -213,13 +213,12 @@ proc renderSettings {} {
                         reportWarning "PATH exceeds [getConf csh_limit]\
                            characters, truncating and appending\
                            /usr/bin:/bin ..."
-                        set val [string range $val 0 [expr {[getConf\
-                           csh_limit] - 1}]]:/usr/bin:/bin
+                        set val [string range $val 0 [getConf\
+                           csh_limit]-1]:/usr/bin:/bin
                      } else {
                         reportWarning "$var exceeds [getConf csh_limit]\
                            characters, truncating..."
-                         set val [string range $val 0 [expr {[getConf\
-                           csh_limit]  - 1}]]
+                         set val [string range $val 0 [getConf csh_limit]-1]
                      }
                   }
                   lappend g_shcode_out "setenv $var $val;"
