--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -1802,7 +1802,7 @@ proc setModuleDependency {mod} {
    # modules loaded afterward are unmet dependencies as dependents have
    # not been reloaded after them
    set modidx [lsearch -exact $modlist $mod]
-   set modnpolist [lrange $modlist [expr {$modidx + 1}] end]
+   set modnpolist [lrange $modlist $modidx+1 end]
    set modlist [lrange $modlist 0 $modidx]
    # reverse list to get closest match if returning lastly loaded module
    if {[getConf unload_match_order] eq {returnlast}} {
