Record avail mods matching mod spec when parsing it
Update module specification parsing mechanism to add a getavails
argument. It indicates that available modules matching spec should be
searched in enabled modulepaths to record them in module version
specification structure.

When searching for available matching modules, disable extra match
search to avoid an infinite resolution loop.

--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -371,7 +371,7 @@ proc module {command args} {
       # some cmds allow extra specifier in query
       set allow_xt_spec [expr {$command in {avail paths whatis}}]
       set args [parseModuleSpecification 0 $allow_noname_spec $allow_xt_spec\
-         {*}$args]
+         0 {*}$args]
    }
 
    if {!$topcall} {
@@ -810,7 +810,7 @@ proc ml {args} {
    } else {
       # parse specified module and get list of mods to unload and mods to load
       defineParseModuleSpecificationProc [getConf advanced_version_spec]
-      lassign [parseModuleSpecification 1 0 0 {*}$fargs] modunlist modlolist
+      lassign [parseModuleSpecification 1 0 0 0 {*}$fargs] modunlist modlolist
 
       # main procedure has already raised error for badly written argument
       # like '-' or '--', but we need here to replay module-specific argument
