--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -602,7 +602,7 @@ proc cmdModuleRestore {args} {
    foreach mod [lreverse $mod_to_unload] {
       # test stickiness over full module name version variant designation
       if {[set vr [getVariantList $mod 1]] ne {}} {
-         lassign [parseModuleSpecification 0 0 0 $mod {*}$vr] modvr
+         lassign [parseModuleSpecification 0 0 0 0 $mod {*}$vr] modvr
       } else {
          set modvr $mod
       }
@@ -2472,7 +2472,7 @@ proc cmdModuleRefresh {} {
       # prepare info to execute modulefile
       set vrlist [getVariantList $lm 1]
       if {[llength $vrlist] > 0} {
-         lassign [parseModuleSpecification 0 0 0 $lm {*}$vrlist] lmvr
+         lassign [parseModuleSpecification 0 0 0 0 $lm {*}$vrlist] lmvr
       } else {
          set lmvr $lm
       }
