--- a/tcl/coll.tcl.in
+++ b/tcl/coll.tcl.in
@@ -320,7 +320,7 @@ proc parseCollectionContent {fdata} {
          }
          # parse module specification to distinguish between module + variant
          # specified and multiple modules specified on a single line
-         set parsedlist [parseModuleSpecification 0 0 0 {*}$cleanlist]
+         set parsedlist [parseModuleSpecification 0 0 0 0 {*}$cleanlist]
          foreach parsed $parsedlist {
             set tag_arr($parsed) $tag_list
          }
