install: migrate to SPDX licence format in RPM spec file

--- a/contrib/rpm/environment-modules.spec.in
+++ b/contrib/rpm/environment-modules.spec.in
@@ -6,7 +6,7 @@ Version:        5.2.0
 Release:        @MODULES_RPM_RELEASE@%{?dist}
 Summary:        Provides dynamic modification of a user's environment
 
-License:        GPLv2+
+License:        GPL-2.0-or-later
 URL:            http://modules.sourceforge.net/
 Source0:        http://downloads.sourceforge.net/modules/modules-@MODULES_RELEASE@@MODULES_BUILD@.tar.bz2
 
