gh: install new tcl-devel package on MSYS2

--- a/.github/workflows/windows_tests.yaml
+++ b/.github/workflows/windows_tests.yaml
@@ -118,7 +118,7 @@ jobs:
       - name: Install system packages
         shell: msys2 {0}
         run: |
-          pacman --noconfirm --noprogressbar -S tcl dejagnu python ruby cmake zsh tcsh mksh fish gcc autoconf make git wget
+          pacman --noconfirm --noprogressbar -S tcl tcl-devel dejagnu python ruby cmake zsh tcsh mksh fish gcc autoconf make git wget
       - name: Build Modules
         shell: msys2 {0}
         run: |
