Refresh modules that put content to stdout/prestdout
Mark modulefile qualified for refresh evaluation when puts command is used
to send content to stdout or prestdout channels.

Such loaded modules where wrongly skipped during refresh unless if they
declared another volatile environment change.

Choice is made to also refresh modules that put content to
stdout/prestdout to keep the behavior of Modules 3.2

Fixes #488

--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -1596,8 +1596,11 @@ proc putsModfileCmd {itrp args} {
       knerror {wrong # args: should be "puts ?-nonewline? ?channelId? string"}
    # defer puts if it targets stdout (see renderSettings)
    } elseif {[info exists deferPuts]} {
+      # current module is qualified for refresh evaluation
+      lappendState -nodup refresh_qualified [currentState modulename]
       lappend ::g_stdoutPuts {*}$deferPuts
    } elseif {[info exists deferPrePuts]} {
+      lappendState -nodup refresh_qualified [currentState modulename]
       lappend ::g_prestdoutPuts {*}$deferPrePuts
    # if it targets stderr call report, which knows what channel to use
    } elseif {[info exists reportArgs]} {
